# EBCC

./: .gitignore  .gitmodules  AUTHORS  Cargo.toml  LICENSE  README.md  README_RUST.md  TODO.md  TODO_c.md  TODO_jxl.md  build.rs  compressed.nc  download.py  filter_wrapper.py  params_helper.py  pyproject.toml  pytest.ini  setup.py  temperature.nc  test.hdf5  test.py  zarr_test.py
.devcontainer/: Dockerfile
.github/workflows/: build.yml
binding/: codec.rs  config.rs  lib.rs  numcodecs_impl.rs
binding/examples/: numcodecs_integration.rs
binding/tests/: integration_tests.rs
data/: compare.py  compress.sh  compress_and_compare.py  compress_ebcc.py  compress_jp2.py  compress_logs.txt  compress_sperr.py  compress_sz.py  download_era5.py  logs.txt  myfilter  test_data.npy  test_jxl_error_hist.py  test_netcdf.sh  text_jxl_error_hist.py
data/test_legacy_decode/: test_legacy_decode.py
ebcc/: __init__.py  filter_wrapper.py  zarr_filter.py
example/: example_hdf5.py
examples/: basic_compression.rs  example_hdf5.py  example_zarr.py  numcodecs_integration.rs
scripts/: profile_ebcc_compression.py  run_profiling.py
src/: CMakeLists.txt  Makefile  config.rs  ebcc_codec.c  ebcc_codec.h  ffi.rs  h5z_ebcc.c  h5z_j2k.c  hdf5_stub.h  j2k_codec.h  quantile.h  spiht.cc  spiht.h  wavelet.h  zarr_filter.py  zarr_test.py
src/log/: log.c  log.h
src/spiht/: Makefile  bitio.h  bitstream.c  bitstream.h  dwt.h  image.c  image.h  ml.h  spiht.cc  spiht.h  spiht_re.c  spiht_re.h  wavelet.h
tests/: conftest.py  integration_tests.rs  test_c_api.py  test_netcdf.py  test_zarr.py
tests/benchmarks/: __init__.py  compare.py  compress.sh  compress_and_compare.py  compress_ebcc.py  compress_sperr.py  compress_sz.py  conftest.py  test_comparison_benchmarks.py  test_compression_benchmarks.py
