[package]
name = "ebcc"
version = "1.0.0"
edition = "2021"
authors = ["EBCC Contributors"]
description = "Rust bindings for EBCC (Error Bounded Climate Compressor) with numcodecs support"
license = "MIT"
repository = "https://github.com/spcl/EBCC"
readme = "README.md"
keywords = ["compression", "climate", "hdf5", "jpeg2000", "wavelet"]
categories = ["compression", "science", "encoding", "api-bindings"]

[dependencies]
# Core numcodecs traits
numcodecs = { version = "0.2.1", optional = true }

# Additional dependencies needed for numcodecs integration
postcard = { version = "1.0", optional = true }
schemars = { version = "1.0.0-alpha.15", features = ["derive", "preserve_order"], optional = true }

# FFI and binding generation
bindgen = { version = "0.70", optional = true }
cc = "1.0"

# Array handling 
ndarray = "0.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# C interop
libc = "0.2"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[features]
default = []
# Enable bindgen code generation at build time
bindgen = ["dep:bindgen"]
# Enable numcodecs integration
numcodecs = ["dep:numcodecs", "dep:postcard", "dep:schemars"]

[build-dependencies]
bindgen = { version = "0.70", optional = true }
cmake = "0.1"
pkg-config = "0.3"

[lib]
name = "ebcc"
crate-type = ["rlib"]
path = "binding/lib.rs"

[[example]]
name = "basic_compression"
path = "examples/basic_compression.rs"
required-features = []

[[example]]
name = "numcodecs_integration"
path = "examples/numcodecs_integration.rs"
required-features = []

[package.metadata.docs.rs]
features = ["bindgen"]

# Profile configurations
[profile.dev]
# Use release-like optimizations for dev builds
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
# Optimize for performance
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[profile.bench]
# Same as release but with debug info for profiling
inherits = "release"
debug = true

[profile.test]
# Use optimized builds for tests but keep debug info
opt-level = 2
debug = true