[project]
name = "compression-filter"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["matplotlib", "numpy", "h5py"]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"*" = ["libh5z_j2k.so"]
